--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
       <div class="starter-template">
         <h2>Latest News</h2>
         <ul class="glyphicon glyphicon-list-alt">
+          <li>11/2022: One paper has been accepted in VLDB'23. Congratulations to Pu!</li>
+          <li>11/2022: One paper has been accepted in PPoPP'23.</li>
           <li>10/2022: One paper has been accepted in IEEE Transactions on Visualization and Computer Graphics.</li>
           <li>08/2022: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2230098&HistoricalAwards=false">CyberTraining project</a> was awarded by the National Science Foundation (my role: site PI). Thanks a lot to NSF!</li>
           <li>08/2022: One paper has been accepted in IEEE Transactions on Big Data.</li>
@@ -138,6 +140,18 @@
 
       <div class="starter-template">
         <h2>Selected Publications (<a href="research.html#publication">Full List</a>, <a href="https://scholar.google.com/citations?user=QRj1QroAAAAJ&hl=en">Google Scholar</a>)</h2>
+        <div class="row">
+          <div class="col-md-2">
+            <h6>VLDB'23</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <u>Pu Jiao</u>, Sheng Di, Hanqi Guo, Kai Zhao, Jiannan Tian, Dingwen Tao, <b>Xin Liang<sup>*</sup></b>, and Franck Cappello.<br>
+              Toward Quantity-of-Interest Preserving Lossy Compression for Scientific Data.<br>
+              <I>The 49th International Conference on Very Large Data Bases (VLDB'23), Vancour, Canada, Aug 28 - Sep 1, 2022.</I> (*: Corresponding authors)<br>
+            </p>
+          </div>
+        </div> 
         <div class="row">
           <div class="col-md-2">
             <h6>TVCG</h6>
