--- a/research.html
+++ b/research.html
@@ -147,6 +147,32 @@
 
         <div class="row">
           <div class="col-md-2">
+            <h6>VLDB'23</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <u>Pu Jiao</u>, Sheng Di, Hanqi Guo, Kai Zhao, Jiannan Tian, Dingwen Tao, <b>Xin Liang<sup>*</sup></b>, and Franck Cappello.<br>
+              Toward Quantity-of-Interest Preserving Lossy Compression for Scientific Data.<br>
+              <I>The 49th International Conference on Very Large Data Bases (VLDB'23), Vancour, Canada, Aug 28 - Sep 1, 2022.</I> (*: Corresponding authors)<br>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>PPoPP'23</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Jieyang Chen, <b>Xin Liang</b>, Kai Zhao, Hadi Zamani Sabzi, Laxmi Bhuyan, and Zizhong Chen.<br>
+              Improving Energy Saving of One-sided Matrix Decompositions on CPU-GPU Heterogeneous Systems.<br>
+              <I>The 28th ACM SIGPLAN Annual Symposium on Principles and Practice of Parallel Programming, Montreal, Canada. Feb 25 - Mar 1, 2023.</I><br>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
             <h6>SC'22</h6>
           </div>
           <div class="col-md-10">
