--- a/index.html
+++ b/index.html
@@ -139,7 +139,10 @@
       <div><hr></div>
 
       <div class="starter-template">
-        <h2>Selected Publications (with my students underlined. <a href="research.html#publication">Full List</a>, <a href="https://scholar.google.com/citations?user=QRj1QroAAAAJ&hl=en">Google Scholar</a>)</h2>
+        <h2>Selected Publications (<a href="research.html#publication">Full List</a>, <a href="https://scholar.google.com/citations?user=QRj1QroAAAAJ&hl=en">Google Scholar</a>)</h2>
+
+        <p><I>My students are underlined.</I></p>
+
         <div class="row">
           <div class="col-md-2">
             <h6>VLDB'23</h6>
