--- a/research.html
+++ b/research.html
@@ -145,6 +145,8 @@
         <div><hr></div>
         <h4 class="lead">Refereed Conference Publications</h4>
 
+        <p><I>My students are underlined.</I></p>
+
         <div class="row">
           <div class="col-md-2">
             <h6>VLDB'23</h6>
