--- a/research.html
+++ b/research.html
@@ -143,9 +143,10 @@
       <div class="starter-template">
         <h2><a id="publication"></a>Publications</h2>
         <div><hr></div>
-        <h4 class="lead">Refereed Conference Publications</h4>
-
         <p><I>My students are underlined.</I></p>
+        <div><hr></div>
+        
+        <h4 class="lead">Refereed Conference Publications</h4>
 
         <div class="row">
           <div class="col-md-2">
