--- a/research.html
+++ b/research.html
@@ -141,9 +141,7 @@
       <div><hr></div>
 
       <div class="starter-template">
-        <h2><a id="publication"></a>Publications</h2>
-        <div><hr></div>
-        <p><I>My students are underlined.</I></p>
+        <h2><a id="publication"></a>Publications (with my students underlined)</h2>
         <div><hr></div>        
         <h4 class="lead">Refereed Conference Publications</h4>
         <div><hr></div>
