--- a/index.html
+++ b/index.html
@@ -87,12 +87,14 @@
           <li>11/2022: One paper has been accepted in VLDB'23. Congratulations to Pu!</li>
           <li>11/2022: One paper has been accepted in PPoPP'23.</li>
           <li>10/2022: One paper has been accepted in IEEE Transactions on Visualization and Computer Graphics.</li>
+          <li>08/2022: Mingze Xia joined our team as a PhD student. Welcome Mingze!</li>
           <li>08/2022: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2230098&HistoricalAwards=false">CyberTraining project</a> was awarded by the National Science Foundation (my role: site PI). Thanks a lot to NSF!</li>
           <li>08/2022: One paper has been accepted in IEEE Transactions on Big Data.</li>
           <li>06/2022: One paper has been accepted in SC'22.</li>
           <li>05/2022: One paper has been accepted in SSDBM'22.</li>
           <li>04/2022: One paper has been accepted in HPDC'22.</li>
           <li>02/2022: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2153451&HistoricalAwards=false">CRII project</a> was awarded by the National Science Foundation (my role: PI). Thanks a lot to NSF!</li>
+          <li>01/2022: Pu Jiao joined our team as a PhD student. Welcome Pu!</li>
           <li>11/2021: One paper has been accepted in ICDE'22.</li>
           <li>11/2021: I am serving as a Guest Editor of the special issue <a href="https://www.mdpi.com/journal/electronics/special_issues/new_trends_HPC">"New Trends for High-Performance Computing"</a> in <a href="https://www.mdpi.com/journal/electronics">Electronics</a>. Please consider making a submission!</li>
           <li>10/2021: Our <a href="https://szcompressor.org">SZ compression software</a> has been selected for <a href="https://www.rdworldonline.com/rd-100-2021-winner/sz-a-lossy-compression-framework-for-scientific-data/">2021 R&D100 Awards</a>! </li>
