--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         <ul class="glyphicon glyphicon-list-alt">
           <li>11/2022: One paper has been accepted in VLDB'23. Congratulations to Pu!</li>
           <li>11/2022: One paper has been accepted in PPoPP'23.</li>
+          <li>11/2022: Attended the Turing lecture by Dr. Jack Dongarra at SC'22. Dr. Dongarra received <a href="https://awards.acm.org/about/2021-turing">the 2021 ACM A.M. Turing Award</a> for pioneering contributions to numerical algorithms and libraries that enabled high performance computational software. [<a href="https://www.youtube.com/watch?v=cSO0Tc2w5Dg">video</a>]</li>
           <li>10/2022: One paper has been accepted in IEEE Transactions on Visualization and Computer Graphics.</li>
           <li>08/2022: Mingze Xia joined our team as a PhD student. Welcome Mingze!</li>
           <li>08/2022: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2230098&HistoricalAwards=false">CyberTraining project</a> was awarded by the National Science Foundation (my role: site PI). Thanks a lot to NSF!</li>
