--- a/index.html
+++ b/index.html
@@ -84,17 +84,25 @@
       <div class="starter-template">
         <h2>Latest News</h2>
         <ul class="glyphicon glyphicon-list-alt">
+          <li>09/2023: One paper has been accepted in HiPC'23. Congratulations to Pu!</li>
+          <li>08/2023: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2313122&HistoricalAwards=false">OAC Core project</a> was awarded by the National Science Foundation (my role: lead PI). Thanks a lot to the NSF!</li>
+          <li>08/2023: Xuan Wu joined our team as a PhD student. Welcome Xuan!</li>          
+          <li>06/2023: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2311756&HistoricalAwards=false">CSSI project</a> was awarded by the National Science Foundation (my role: lead PI). Thanks a lot to the NSF!</li>
+          <li>05/2023: One paper has been accepted in ICS'23 and nominated in the Best Paper Finalists!</li>
+          <li>04/2023: Two papers have been accepted in HPDC'23.</li>
+          <li>02/2023: One paper has been accepted in ICDE'23.</li>
+          <li>01/2023: Mikhail Kovalev and Andrew Chen from Paul Laurence Dunbar High School joined our team to complete their capstone research project. Welcome Mikhail and Andrew!</li>
           <li>11/2022: One paper has been accepted in VLDB'23. Congratulations to Pu!</li>
           <li>11/2022: One paper has been accepted in PPoPP'23.</li>
           <li>11/2022: Attended the Turing lecture by Dr. Jack Dongarra at SC'22. Dr. Dongarra received <a href="https://awards.acm.org/about/2021-turing">the 2021 ACM A.M. Turing Award</a> for pioneering contributions to numerical algorithms and libraries that enabled high performance computational software. [<a href="https://www.youtube.com/watch?v=cSO0Tc2w5Dg">video</a>]</li>
           <li>10/2022: One paper has been accepted in IEEE Transactions on Visualization and Computer Graphics.</li>
           <li>08/2022: Mingze Xia joined our team as a PhD student. Welcome Mingze!</li>
-          <li>08/2022: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2230098&HistoricalAwards=false">CyberTraining project</a> was awarded by the National Science Foundation (my role: site PI). Thanks a lot to NSF!</li>
+          <li>08/2022: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2230098&HistoricalAwards=false">CyberTraining project</a> was awarded by the National Science Foundation (my role: site PI). Thanks a lot to the NSF!</li>
           <li>08/2022: One paper has been accepted in IEEE Transactions on Big Data.</li>
           <li>06/2022: One paper has been accepted in SC'22.</li>
           <li>05/2022: One paper has been accepted in SSDBM'22.</li>
           <li>04/2022: One paper has been accepted in HPDC'22.</li>
-          <li>02/2022: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2153451&HistoricalAwards=false">CRII project</a> was awarded by the National Science Foundation (my role: PI). Thanks a lot to NSF!</li>
+          <li>02/2022: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2153451&HistoricalAwards=false">CRII project</a> was awarded by the National Science Foundation (my role: PI). Thanks a lot to the NSF!</li>
           <li>01/2022: Pu Jiao joined our team as a PhD student. Welcome Pu!</li>
           <li>11/2021: One paper has been accepted in ICDE'22.</li>
           <li>11/2021: I am serving as a Guest Editor of the special issue <a href="https://www.mdpi.com/journal/electronics/special_issues/new_trends_HPC">"New Trends for High-Performance Computing"</a> in <a href="https://www.mdpi.com/journal/electronics">Electronics</a>. Please consider making a submission!</li>
@@ -148,13 +156,25 @@
 
         <div class="row">
           <div class="col-md-2">
+            <h6>HiPC'23</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <u>Pu Jiao</u>, Sheng Di, Jinyang Liu, <b>Xin Liang<sup>*</sup></b>, and Franck Cappello.<br>
+              Characterization and Detection of Artifacts for Error-controlled Lossy Compressors.<br>
+              <I>Proceedings of the 30th IEEE International Conference on High Performance Computing, Data, and Analytics, Goa, India, Dec 18 - Dec 21, 2023.</I> (*: Corresponding authors)<br>
+            </p>
+          </div>
+        </div> 
+        <div class="row">
+          <div class="col-md-2">
             <h6>VLDB'23</h6>
           </div>
           <div class="col-md-10">
             <p>
               <u>Pu Jiao</u>, Sheng Di, Hanqi Guo, Kai Zhao, Jiannan Tian, Dingwen Tao, <b>Xin Liang<sup>*</sup></b>, and Franck Cappello.<br>
               Toward Quantity-of-Interest Preserving Lossy Compression for Scientific Data.<br>
-              <I>The 49th International Conference on Very Large Data Bases (VLDB'23), Vancour, Canada, Aug 28 - Sep 1, 2022.</I> (*: Corresponding authors)<br>
+              <I>Proceedings of the 49th International Conference on Very Large Data Bases, Vancour, Canada, Aug 28 - Sep 1, 2022.</I> (*: Corresponding authors)<br>
             </p>
           </div>
         </div> 
