--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
         <h2>Latest News</h2>
         <ul class="glyphicon glyphicon-list-alt">
           <li>09/2023: One paper has been accepted in HiPC'23. Congratulations to Pu!</li>
-          <li>08/2023: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2313122&HistoricalAwards=false">OAC Core project</a> was awarded by the National Science Foundation (my role: lead PI). Thanks a lot to the NSF!</li>
+          <li>08/2023: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2313122&HistoricalAwards=false">OAC Core project</a> was awarded by the National Science Foundation (my role: lead PI, in collaborations with the University of Utah and the Ohio State University). This project aims to design topology-aware compressors for scientific applications. Thanks a lot to the NSF!</li>
           <li>08/2023: Xuan Wu joined our team as a PhD student. Welcome Xuan!</li>          
-          <li>06/2023: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2311756&HistoricalAwards=false">CSSI project</a> was awarded by the National Science Foundation (my role: lead PI). Thanks a lot to the NSF!</li>
+          <li>06/2023: One paper has been accepted in VIS'23.</li>
+          <li>06/2023: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2311756&HistoricalAwards=false">CSSI project</a> was awarded by the National Science Foundation (my role: lead PI, in collaborations with New Jersey Institute of Technology and Temple University). This project aims to develop progressive data management middleware to advance exascale science. Thanks a lot to the NSF!</li>
           <li>05/2023: One paper has been accepted in ICS'23 and nominated in the Best Paper Finalists!</li>
           <li>04/2023: Two papers have been accepted in HPDC'23.</li>
           <li>02/2023: One paper has been accepted in ICDE'23.</li>
@@ -95,14 +96,15 @@
           <li>11/2022: One paper has been accepted in VLDB'23. Congratulations to Pu!</li>
           <li>11/2022: One paper has been accepted in PPoPP'23.</li>
           <li>11/2022: Attended the Turing lecture by Dr. Jack Dongarra at SC'22. Dr. Dongarra received <a href="https://awards.acm.org/about/2021-turing">the 2021 ACM A.M. Turing Award</a> for pioneering contributions to numerical algorithms and libraries that enabled high performance computational software. [<a href="https://www.youtube.com/watch?v=cSO0Tc2w5Dg">video</a>]</li>
+          <li>10/2022: We received a subcontract from Argonne National Laboratory to investigate the artifacts in lossy compressors and the possible recover. Thanks a lot to ANL!</li>
           <li>10/2022: One paper has been accepted in IEEE Transactions on Visualization and Computer Graphics.</li>
           <li>08/2022: Mingze Xia joined our team as a PhD student. Welcome Mingze!</li>
-          <li>08/2022: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2230098&HistoricalAwards=false">CyberTraining project</a> was awarded by the National Science Foundation (my role: site PI). Thanks a lot to the NSF!</li>
+          <li>08/2022: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2230098&HistoricalAwards=false">CyberTraining project</a> was awarded by the National Science Foundation (my role: site PI, in collaboration with University of North Texas, Southern Illinois University Carbondale, and Missouri University of Science and Technology). This project aims to host training workshops to develop workforce for deep learning with GPU-based systems. Thanks a lot to the NSF!</li>
           <li>08/2022: One paper has been accepted in IEEE Transactions on Big Data.</li>
           <li>06/2022: One paper has been accepted in SC'22.</li>
           <li>05/2022: One paper has been accepted in SSDBM'22.</li>
           <li>04/2022: One paper has been accepted in HPDC'22.</li>
-          <li>02/2022: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2153451&HistoricalAwards=false">CRII project</a> was awarded by the National Science Foundation (my role: PI). Thanks a lot to the NSF!</li>
+          <li>02/2022: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2153451&HistoricalAwards=false">CRII project</a> was awarded by the National Science Foundation (my role: PI). This project aims to enable the preservation of quantities-of-interest in scientific lossy compressors. Thanks a lot to the NSF!</li>
           <li>01/2022: Pu Jiao joined our team as a PhD student. Welcome Pu!</li>
 <!-- 
           <li>11/2021: One paper has been accepted in ICDE'22.</li>
