--- a/research.html
+++ b/research.html
@@ -191,6 +191,19 @@
 
         <div class="row">
           <div class="col-md-2">
+            <h6>VIS'23</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Lin Yan, <b>Xin Liang</b>, Hanqi Guo, Bei Wang<br>
+              TopoSZ: Preserving Topology in Error-Bounded Lossy Compression.<br>
+              <I>Proceedings of the 34th IEEE VIS Conferance, Melbourne, Australia, Oct 22 - 27, 2023.</I><br>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
             <h6>HPDC'23</h6>
           </div>
           <div class="col-md-10">
