--- a/teaching.html
+++ b/teaching.html
@@ -56,6 +56,7 @@
       <div class="starter-template">
           <h2>Instructor</h2>
           <ul class="glyphicon glyphicon-list-alt">
+            <li>CS/MA321: Introduction to Numerical Methods, University of Kentucky, August-December, 2023.</li>
             <li>CS621: Parallel and Distributed Computing, University of Kentucky, January-May, 2023.</li>
             <li>CS/MA321: Introduction to Numerical Methods, University of Kentucky, August-December, 2022.</li>
             <li>CS6001: High-performance Computing, Missouri S&T, Rolla, January-May, 2022.</li>
