--- a/group.html
+++ b/group.html
@@ -113,7 +113,7 @@
         <div class="row">
           <div class="col-md-2"></div> 
           <div class="col-md-6">
-              <h2 align="left">Mingze Xia</h2>
+              <h2 align="left">Xuan Wu</h2>
               <p align="left">Ms. Xuan Wu received her bachelor’s degree in Statistics from Wuhan University in 2022. Xuan joined Polaris lab in Fall 2023. Previously, she worked on developing computational algorithms in the field of statistical genetics. Her research interests include high-performance computing and scientific data compression. Contact her at <a href="mailto:xuan.wu@uky.edu">xuan.wu@uky.edu</a>.
               </p>         
           </div>
