--- a/awards.html
+++ b/awards.html
@@ -56,6 +56,8 @@
       <div class="starter-template">
           <h2>Awards</h2>
           <ul class="glyphicon glyphicon-list-alt">
+              <li>Best Paper Finalists, International Conference on Supercomputing, 2023. </li>
+              <li>CISE Research Initiation Initiative (CRII) Award, National Science Foundation, 2022. </li>
               <li>2021 R&D 100 Award (SZ compression framework), 2021.</li>
               <li>Best Paper Award, IEEE Cluster, 2018.</li>
               <li>Dissertation Year Program Fellowship, University of California, Riverside, 2018. </li>
