--- a/research.html
+++ b/research.html
@@ -77,7 +77,7 @@
                 <li>Project description: Effective management of scientific data produced by extreme-scale simulations and instruments is crucial for advancing scientific discoveries. Due to the scale of data and the diverse requirements of scientific analytics, there is a growing need to manage data in a progressive manner, such that users can stream as much data as they need to carry out their data analytics with reduced data movement and computation. However, little effort has been put into creating robust and scalable cyberinfrastructure services that link the recent algorithmic innovations in progressive methods with scientific data analytics, leaving these capabilities inaccessible to scientists. This project aims to develop a sustainable framework ProDM that supports the progressive management of scientific data to facilitate its use in scientific applications. The success of this project will enable new scientific research and novel findings by providing a new way to manage and analyze data. Furthermore, outcomes of this project will be delivered as publicly available software to enhance research cyberinfrastructure, promote education and teaching, and broaden participation in computing.</li>
             </ul>
           </li>
-          <li><img src="Platform.png" class="float-right" style="height:120px;margin-right:40px">Collaborative Research: CyberTraining: Pilot: Research Workforce Development for Deep Learning Systems in Advanced GPU Cyberinfrastructure
+          <li><img src="Platform.png" class="float-right" style="height:120px;margin-right:40px"><a href="https://dlgpu-workshop.github.io/">Collaborative Research: CyberTraining: Pilot: Research Workforce Development for Deep Learning Systems in Advanced GPU Cyberinfrastructure</a>
             <ul class="glyphicon glyphicon-list-alt">
                 <li>Role: Site PI</li>
                 <li>Lead PI: Tong Shu</li>
@@ -197,7 +197,7 @@
             <p>
               Lin Yan, <b>Xin Liang</b>, Hanqi Guo, Bei Wang<br>
               TopoSZ: Preserving Topology in Error-Bounded Lossy Compression.<br>
-              <I>Proceedings of the 34th IEEE VIS Conferance, Melbourne, Australia, Oct 22 - 27, 2023.</I><br>
+              <I>Proceedings of the 34th IEEE VIS Conference, Melbourne, Australia, Oct 22 - 27, 2023.</I><br>
             </p>
           </div>
         </div> 
@@ -282,6 +282,19 @@
 
         <div class="row">
           <div class="col-md-2">
+            <h6>HiPC'22</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Arindam Khanda, Sanjukta Bhowmick, <b>Xin Liang</b>, Sajal K Das.<br>
+              Parallel Vertex Color Update on Large Dynamic Networks.<br>
+              <I>Proceedings of IEEE 29th International Conference on High Performance Computing, Data, and Analytics, Bengaluru, India, Dec 18 - 21, 2022.</I><br>
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-2">
             <h6>SC'22</h6>
           </div>
           <div class="col-md-10">
@@ -289,19 +302,6 @@
               Jinyang Liu, Sheng Di, Kai Zhao, <b>Xin Liang</b>, Zizhong Chen, and Franck Cappello.<br>
               Dynamic Quality Metric Oriented Error Bounded Lossy Compression for Scientific Datasets.<br>
               <I>Proceedings of the 34th ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, Dallas, TX, USA, Nov 13 - 18, 2022.</I><br>
-            </p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-2">
-            <h6>HiPC'22</h6>
-          </div>
-          <div class="col-md-10">
-            <p>
-              Arindam Khanda, Sanjukta Bhowmick, <b>Xin Liang</b>, Sajal K Das.<br>
-              Region-adaptive, Error-controlled Scientific Data Compression using Multilevel Decomposition.<br>
-              <I>Proceedings of IEEE 29th International Conference on High Performance Computing, Data, and Analytics, Bengaluru, India, Dec 18 - 21, 2022.</I><br>
             </p>
           </div>
         </div>
