--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
       <div class="starter-template">
         <h2>Latest News</h2>
         <ul class="glyphicon glyphicon-list-alt">
+          <li>12/2023: One paper has been accepted in ICDE'24. Congratulations to Mingze!</li>
+          <li>11/2023: Dr. Liang has been recommended as EPSCoR Research Fellows for our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2327266&HistoricalAwards=false">RII Track-4 project</a> awarded by the National Science Foundation (my role: PI). This project aims to improve the performance of MPI on exascale systems with adaptive lossy compression methods. Thanks a lot to the NSF!</li>
+          <li>11/2023: One paper has been accepted in SIGMOD'24.</li>
           <li>09/2023: One paper has been accepted in HiPC'23. Congratulations to Pu!</li>
           <li>08/2023: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2313122&HistoricalAwards=false">OAC Core project</a> was awarded by the National Science Foundation (my role: lead PI, in collaborations with the University of Utah and the Ohio State University). This project aims to design topology-aware compressors for scientific applications. Thanks a lot to the NSF!</li>
           <li>08/2023: Xuan Wu joined our team as a PhD student. Welcome Xuan!</li>          
@@ -157,6 +160,19 @@
         <h2>Selected Publications (<a href="research.html#publication">Full List</a>, <a href="https://scholar.google.com/citations?user=QRj1QroAAAAJ&hl=en">Google Scholar</a>)</h2>
 
         <p><I>My students are underlined.</I></p>
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>ICDE'24</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <u>Mingze Xia</u>, Sheng Di, Franck Cappello, <u>Pu Jiao</u>, Kai Zhao, Jinyang Liu, <u>Xuan Wu</u>, <b>Xin Liang<sup>*</sup></b>, and Hanqi Guo.<br>
+              Preserving Topological Feature with Sign-of-Determinant Predicates in Lossy Compression: A Case Study of Vector Field Critical Points.<br>
+              <I>Proceedings of the 40th IEEE International Conference on Data Engineering, Utrecht, Netherlands, May 13 - 16, 2024.</I> (*: Corresponding authors)<br>
+            </p>
+          </div>
+        </div> 
 
         <div class="row">
           <div class="col-md-2">
