--- a/research.html
+++ b/research.html
@@ -57,6 +57,16 @@
         <h2><a id="project"></a>Projects</h2>
         <div><hr></div>
         <ul class="glyphicon glyphicon-list-alt">
+          <li><img src="topoz.png" class="float-right" style="height:120px;margin-right:40px">RII Track-4: NSF: Scalable MPI with Adaptive Compression for GPU-based Computing Systems
+            <ul class="glyphicon glyphicon-list-alt">
+                <li>Role: PI</li>
+                <li>Lead PI: Xin Liang</li>
+                <li>Sponsor: NSF</li>
+                <li>Amount: $280K</li>
+                <li>Period: 02/2024 - 01/2026</li>
+                <li>Project description: This Research Infrastructure Improvement Track-4 EPSCoR Research Fellows project will provide a fellowship to an Assistant professor and training for a graduate student at the University of Kentucky Research Foundation. This work will be conducted in collaboration with researchers at the Argonne National Laboratory (ANL). Message Passing Interface (MPI) is the de facto standard to perform communication and scale applications on high-performance computing systems. The performance of MPI is crucial to various downstream applications, including scientific simulations, big data analytics, and artificial intelligence. However, as the recent development of GPUs continues to outpace that of commodity networks, large-size data transfer is becoming the major performance bottleneck in state-of-the-art MPI libraries. This work aims to tackle this problem by developing a performant and scalable MPI library through integrated data compression, which is critical to fully exploit the power of current and next-generation computing systems. The success of this project will allow for accelerated executions of scientific code and data analytics, reducing the time to scientific insights for applications running on large-scale GPU-based computing systems. This will help advance scientific discoveries across a wide range of computer and computational disciplines. The deliverables of this project will be made publicly accessible to the community to enhance the research and engineering cyberinfrastructure in broader domains. In addition, this project will contribute to the education and workforce development for advanced cyberinfrastructure through the training of graduate students.</li>
+            </ul>
+          </li>          
           <li><img src="topoz.png" class="float-right" style="height:120px;margin-right:40px">Collaborative Research: OAC Core: Topology-Aware Data Compression for Scientific Analysis and Visualization
             <ul class="glyphicon glyphicon-list-alt">
                 <li>Role: PI</li>
@@ -178,13 +188,39 @@
 
         <div class="row">
           <div class="col-md-2">
+            <h6>ICDE'24</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <u>Mingze Xia</u>, Sheng Di, Franck Cappello, <u>Pu Jiao</u>, Kai Zhao, Jinyang Liu, <u>Xuan Wu</u>, <b>Xin Liang<sup>*</sup></b>, and Hanqi Guo.<br>
+              Preserving Topological Feature with Sign-of-Determinant Predicates in Lossy Compression: A Case Study of Vector Field Critical Points.<br>
+              <I>Proceedings of the 40th IEEE International Conference on Data Engineering, Utrecht, Netherlands, May 13 - 16, 2024.</I> (*: Corresponding authors)<br>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>SIGMOD'24</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Jinyang Liu, Sheng Di, Kai Zhao, <b>Xin Liang</b>, Sian Jin, Zizhe Jian, Jiajun Huang, Shixun Wu, Zizhong Chen, Franck Cappello.<br>
+              High-performance Effective Scientific Error-bounded Lossy Compression with Auto-tuned Multi-component Interpolation.<br>
+              <I>Proceedings of the 2024, Santiago, Chile, June 9 - 15, 2024.</I>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
             <h6>HiPC'23</h6>
           </div>
           <div class="col-md-10">
             <p>
               <u>Pu Jiao</u>, Sheng Di, Jinyang Liu, <b>Xin Liang<sup>*</sup></b>, and Franck Cappello.<br>
               Characterization and Detection of Artifacts for Error-controlled Lossy Compressors.<br>
-              <I>Proceedings of the 30th IEEE International Conference on High Performance Computing, Data, and Analytics, Goa, India, Dec 18 - Dec 21, 2023.</I> (*: Corresponding authors)<br>
+              <I>Proceedings of the 30th IEEE International Conference on High Performance Computing, Data, and Analytics, Goa, India, Dec 18 - 21, 2023.</I> (*: Corresponding authors)<br>
             </p>
           </div>
         </div> 
