--- a/research.html
+++ b/research.html
@@ -57,7 +57,7 @@
         <h2><a id="project"></a>Projects</h2>
         <div><hr></div>
         <ul class="glyphicon glyphicon-list-alt">
-          <li><img src="topoz.png" class="float-right" style="height:120px;margin-right:40px">RII Track-4: NSF: Scalable MPI with Adaptive Compression for GPU-based Computing Systems
+          <li><img src="rii.pdf" class="float-right" style="height:120px;margin-right:40px">RII Track-4: NSF: Scalable MPI with Adaptive Compression for GPU-based Computing Systems
             <ul class="glyphicon glyphicon-list-alt">
                 <li>Role: PI</li>
                 <li>Lead PI: Xin Liang</li>
