--- a/research.html
+++ b/research.html
@@ -207,7 +207,7 @@
             <p>
               Jinyang Liu, Sheng Di, Kai Zhao, <b>Xin Liang</b>, Sian Jin, Zizhe Jian, Jiajun Huang, Shixun Wu, Zizhong Chen, Franck Cappello.<br>
               High-performance Effective Scientific Error-bounded Lossy Compression with Auto-tuned Multi-component Interpolation.<br>
-              <I>Proceedings of the 2024, Santiago, Chile, June 9 - 15, 2024.</I>
+              <I>Proceedings of the 2024 ACM SIGMOD International Conference on Management of Data, Santiago, Chile, June 9 - 15, 2024.</I>
             </p>
           </div>
         </div> 
