--- a/awards.html
+++ b/awards.html
@@ -56,6 +56,7 @@
       <div class="starter-template">
           <h2>Awards</h2>
           <ul class="glyphicon glyphicon-list-alt">
+              <li>IEEE-CS Technical Community on High Performance Computing (TCHPC) Early Career Researchers Award for Excellence in High Performance Computing, IEEE TCHPC, 2024.</li>
               <li>EPSCoR Research Fellows, National Science Foundation, 2023.</li>
               <li>Best Paper Finalists, International Conference on Supercomputing, 2023. </li>
               <li>CISE Research Initiation Initiative (CRII) Award, National Science Foundation, 2022. </li>
