--- a/group.html
+++ b/group.html
@@ -122,7 +122,30 @@
           </div> 
           <div class="col-md-2"></div> 
         </div>                  
-
+        <div class="row">
+          <div class="col-md-2"></div> 
+          <div class="col-md-6">
+              <h2 align="left">Boyi Zhang</h2>
+              <p align="left">Mr. Boyi Zhang joined the Polaris Lab in Fall 2024. He received his bachelor's degree in Software Engineering from Dalian University of Technology in 2022 and Master degree in Computer Science from the University of California, Riverside in 2024. Previously, he worked on fault-tolerance BLAS algorithms. His research interests include but not limited to lossy compression, GPU computing and fault tolerance algorithms. Contact him at <a href="mailto:boyi.zhang@uky.edu">boyi.zhang@uky.edu</a>.
+              </p>         
+          </div>
+          <div class="col-md-2">
+              <img src="boyi.jpg" class="float-right" style="height:200px;margin-right:10px">
+          </div> 
+          <div class="col-md-2"></div> 
+        </div>          
+        <div class="row">
+          <div class="col-md-2"></div> 
+          <div class="col-md-6">
+              <h2 align="left">Wenbo Li</h2>
+              <p align="left">Mr. Wenbo Li received his bachelor’s degree in Bioinformatics from Huazhong University of Science and Technology in 2024. Wenbo joined Polaris lab in Fall 2024. Previously, he worked on proteomics and protein language models for the prediction of post-translation modifications. His research interests include high-performance computing, GPU computing, and scientific data compression. Contact him at <a href="mailto:wenbo.li@uky.edu">wenbo.li@uky.edu</a>.
+              </p>         
+          </div>
+          <div class="col-md-2">
+              <img src="wenbo.JPEG" class="float-right" style="height:200px;margin-right:10px">
+          </div> 
+          <div class="col-md-2"></div> 
+        </div>          
       </div> 
       <div><hr></div>
   <!-- </div> -->
