--- a/research.html
+++ b/research.html
@@ -102,8 +102,8 @@
                 <li>Role: PI</li>
                 <li>Lead PI: Xin Liang</li>
                 <li>Sponsor: ANL</li>
-                <li>Amount: $158K</li>
-                <li>Period: 10/2022 - 09/2024</li>
+                <li>Amount: $231K</li>
+                <li>Period: 10/2022 - 09/2025</li>
                 <li>Project description: This project will focus on improving the compression quality of scientific lossy data compressors by exploring intelligent methods and parameter optimization strategies to regenerate feature and mitigate artifacts. The goal is to i) study new techniques to regenerate features and/or mitigate artifacts for scientific lossy data compressors; ii) integrate the methods to improve the compression quality of SZ using parameter optimizations; iii) evaluate and optimize the framework with ECP applications.</li>
             </ul>
           </li>
@@ -188,6 +188,71 @@
 
         <div class="row">
           <div class="col-md-2">
+            <h6>SC'24</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <u>Xuan Wu</u>, Qian Gong, Jieyang Chen, Qing Liu, Norbert Podhorszki, <b>Xin Liang<sup>*</sup></b>, and Scott Klasky.<br>
+              Error-controlled Progressive Retrieval of Scientific Data under Derivable Quantities of Interest.<br>
+              <I>Proceedings of the 36th ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, Atlanta, GA, USA, Nov 17 - 22, 2024.</I> (*: Corresponding authors)<br>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>SC'24</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Jiajun Huang, Sheng Di, Xiaodong Yu, Yujia Zhai, Jinyang Liu, Zizhe Jian, <b>Xin Liang</b>, Kai Zhao, Xiaoyi Lu, Zizhong Chen, and Franck Cappello.<br>
+              hZCC: Accelerating Collective Communication with Co-designed Operation-supported Compression.<br>
+              <I>Proceedings of the 36th ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, Atlanta, GA, USA, Nov 17 - 22, 2024.</I><br>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>VIS'24</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Yuxiao Li, <b>Xin Liang</b>, Bei Wang, Yongfeng Qiu, Lin Yan, and Hanqi Guo.<br>
+              MSz: An Efficient Parallel Algorithm for Correcting Morse-Smale Segmentations in Error-Bounded Lossy Compressors.<br>
+              <I>Proceedings of the 2024 IEEE VIS Conference, Melbourne, Australia, Oct 22 - 27, 2024.</I><br>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>EuroVis'24</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Congrong Ren, <b>Xin Liang</b>, and Hanqi Guo.<br>
+              A Prediction-Traversal Approach for Compressing Scientific Data on Unstructured Meshes with Bounded Error.<br>
+              <I>Proceedings of 26th EG Conference on Visualization, Odense, Denmark, May 27 - May 31, 2024.</I><br>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>IPDPS'24</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Zizhe Jian, Sheng Di, Jinyang Liu, Kai Zhao, <b>Xin Liang</b>, Haiying Xu, Robert Underwood, Shixun Wu, Jiajun Huang, Zizhong Chen, Franck Cappello.<br>
+              CliZ: Optimizing Lossy Compression for Climate Datasets with Adaptive Fine-tuned Data Prediction.<br>
+              <I>Proceed- ings of 38th IEEE International Parallel & Distributed Processing Symposium, San Francisco, California, May 27 - May 31, 2024.</I><br>
+            </p>
+          </div>
+        </div>         
+
+        <div class="row">
+          <div class="col-md-2">
             <h6>ICDE'24</h6>
           </div>
           <div class="col-md-10">
@@ -208,6 +273,19 @@
               Jinyang Liu, Sheng Di, Kai Zhao, <b>Xin Liang</b>, Sian Jin, Zizhe Jian, Jiajun Huang, Shixun Wu, Zizhong Chen, Franck Cappello.<br>
               High-performance Effective Scientific Error-bounded Lossy Compression with Auto-tuned Multi-component Interpolation.<br>
               <I>Proceedings of the 2024 ACM SIGMOD International Conference on Management of Data, Santiago, Chile, June 9 - 15, 2024.</I>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>BigData'23</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Jinyang Liu, Sheng Di, Sian Jin, Kai Zhao, <b>Xin Liang</b>, Zizhong Chen, Franck Cappello.<br>
+              Scientific Error-bounded Lossy Compression with Super-resolution Neural Networks.<br>
+              <I>Proceedings of the 2023 IEEE International Conference on Big Data, Sorrento, Italy, Dec 15 - Dec 18, 2023..</I><br>
             </p>
           </div>
         </div> 
