--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <li>09/2024: We received a renewal of our subcontract from Argonne National Laboratory to continue the investigation on the artifacts in lossy compressors. Thanks a lot to ANL!</li>
           <li>08/2024: Boyi Zhang and Wenbo Li joined our team as PhD students. Welcome Boyi and Wenbo!</li>
           <li>07/2024: One paper has been accepted in VIS'24.</li>
-          <li>06/2024: Two papers have been accepted in SC'24. Congratulations to Xuan on getting her first SC paper!</li>
+          <li>06/2024: Two papers have been accepted in SC'24. Congratulations to Xuan on getting her first SC paper accepted!</li>
           <li>03/2024: One paper has been accepted in EuroVis'24.</li>
           <li>01/2024: One paper has been accepted in IPDPS'24.</li>
           <li>12/2023: One paper has been accepted in ICDE'24. Congratulations to Mingze!</li>
