--- a/research.html
+++ b/research.html
@@ -898,7 +898,7 @@
                 <p>
                   <b>Xin Liang<sup>*</sup></b>, Kai Zhao<sup>*</sup>, Sheng Di, Sihuan Li, Robert Underwood, Ali M. Gok, Jiannan Tian, Junjing Deng, Jon C. Calhoun, Dingwen Tao, Zizhong Chen, and Franck Cappello.<br>
                   SZ3: A Modular Framework for Composing Prediction-based Error-bounded Lossy Compressors.<br>
-                  <I>IEEE Transactions on Big Data, 2022.</I> (*: Co-first authors)<br>
+                  <I>IEEE Transactions on Big Data, 2022.</I> (*: Co-first authors) <b>2023 Best Paper Award from IEEE Transactions on Big Data by the IEEE Computer Society Publications Board.</b><br>
                 </p>
               </div>
             </div> 
