--- a/group.html
+++ b/group.html
@@ -77,7 +77,24 @@
               </p>          
           </div>
           <div class="col-md-2">
-              <img src="me.jpg" class="float-right" style="height:200px;margin-right:10px">
+              <img src="img/me.jpg" class="float-right" style="height:200px;margin-right:10px">
+          </div>  
+          <div class="col-md-2"></div> 
+        </div>        
+      </div> 
+      <div><hr></div>
+      <h2 align="center">Postdoc Researcher</h2>
+      <div><hr></div>
+      <div class="starter-template">
+        <div class="row">
+          <div class="col-md-2"></div> 
+          <div class="col-md-6">
+              <h2 align="left"> Jiannan Tian</h2>
+              <p align="left">Dr. Jiannan Tian Received his Ph.D. degree in Computer Engineering (Intelligent Systems Engineering, Computer Engineering Track) in 2024. His research interests include High-Performance Computing, Heterogeneous Computing, Big-Data Analytics, and Accelerated Scientific Compression. During his Ph.D. study, he works as a student intern at Argonne National Laboratory (ANL). He is also the leading developer of open-source pSZ/cuSZ, a GPU-accelerated error-bounded lossy compressor for scientific data. Contact him at <a href="mailto:jiannan.tian@uky.edu">jiannan.tian@uky.edu</a>.
+              </p>          
+          </div>
+          <div class="col-md-2">
+              <img src="img/Jiannan.jpg" class="float-right" style="height:200px;margin-right:10px">
           </div>  
           <div class="col-md-2"></div> 
         </div>        
@@ -94,7 +111,7 @@
               </p>         
           </div>
           <div class="col-md-2">
-              <img src="Pu.jpeg" class="float-right" style="height:200px;margin-right:10px">
+              <img src="img/Pu.jpeg" class="float-right" style="height:200px;margin-right:10px">
           </div> 
           <div class="col-md-2"></div> 
         </div>                  
@@ -106,7 +123,7 @@
               </p>         
           </div>
           <div class="col-md-2">
-              <img src="Mingze.jpg" class="float-right" style="height:200px;margin-right:10px">
+              <img src="img/Mingze.jpg" class="float-right" style="height:200px;margin-right:10px">
           </div> 
           <div class="col-md-2"></div> 
         </div>                  
@@ -118,7 +135,7 @@
               </p>         
           </div>
           <div class="col-md-2">
-              <img src="xuan.jpg" class="float-right" style="height:200px;margin-right:10px">
+              <img src="img/xuan.jpg" class="float-right" style="height:200px;margin-right:10px">
           </div> 
           <div class="col-md-2"></div> 
         </div>                  
@@ -130,7 +147,7 @@
               </p>         
           </div>
           <div class="col-md-2">
-              <img src="boyi.jpg" class="float-right" style="height:200px;margin-right:10px">
+              <img src="img/boyi.jpg" class="float-right" style="height:200px;margin-right:10px">
           </div> 
           <div class="col-md-2"></div> 
         </div>          
@@ -142,7 +159,7 @@
               </p>         
           </div>
           <div class="col-md-2">
-              <img src="wenbo.JPEG" class="float-right" style="height:200px;margin-right:10px">
+              <img src="img/wenbo.JPEG" class="float-right" style="height:200px;margin-right:10px">
           </div> 
           <div class="col-md-2"></div> 
         </div>          
