--- a/research.html
+++ b/research.html
@@ -57,7 +57,7 @@
         <h2><a id="project"></a>Projects</h2>
         <div><hr></div>
         <ul class="glyphicon glyphicon-list-alt">
-          <li><img src="img/datapoly.pdf" class="float-right" style="height:120px;margin-right:40px">CAREER: Data Polymorphism: Enabling Fast and Adaptable Scientific Data Retrieval with Progressive Representations
+          <li><img src="img/datapoly.png" class="float-right" style="height:120px;margin-right:40px">CAREER: Data Polymorphism: Enabling Fast and Adaptable Scientific Data Retrieval with Progressive Representations
             <ul class="glyphicon glyphicon-list-alt">
                 <li>Role: PI</li>
                 <li>Lead PI: Xin Liang</li>
