--- a/group.html
+++ b/group.html
@@ -73,7 +73,7 @@
           <div class="col-md-2"></div> 
           <div class="col-md-6">
               <h2 align="left"> Xin Liang</h2>
-              <p align="left">Dr. Xin Liang is a tenure-track assistant professor with the Department of Computer Science at University of Kentucky (UKY). He received his Ph.D. in Computer Science from University of California, Riverside in 2019. Prior to that, he received his B.S. in Computer Science from Peking University in 2014, with a minor in Math and Applied Math. Prior to joining UKY, he worked as an assistant professor at Missouri University of Science and Technology and a Computer/Data Scientist in the Workflow Systems Group at Oak Ridge National Laboratory (ORNL). Contact him at <a href="mailto:xliang@uky.edu">xliang@uky.edu</a>.
+              <p align="left">Dr. Xin Liang is a tenure-track assistant professor with the Department of Computer Science at University of Kentucky (UK). He received his Ph.D. in Computer Science from University of California, Riverside in 2019. Prior to that, he received his B.S. in Computer Science from Peking University in 2014, with a minor in Math and Applied Math. Prior to joining UK, he worked as an assistant professor at Missouri University of Science and Technology and a Computer/Data Scientist in the Workflow Systems Group at Oak Ridge National Laboratory (ORNL). Contact him at <a href="mailto:xliang@uky.edu">xliang@uky.edu</a>.
               </p>          
           </div>
           <div class="col-md-2">
