--- a/group.html
+++ b/group.html
@@ -90,7 +90,7 @@
           <div class="col-md-2"></div> 
           <div class="col-md-6">
               <h2 align="left"> Jiannan Tian</h2>
-              <p align="left">Dr. Jiannan Tian Received his Ph.D. degree in Computer Engineering (Intelligent Systems Engineering, Computer Engineering Track) in 2024. His research interests include High-Performance Computing, Heterogeneous Computing, Big-Data Analytics, and Accelerated Scientific Compression. During his Ph.D. study, he works as a student intern at Argonne National Laboratory (ANL). He is also the leading developer of open-source pSZ/cuSZ, a GPU-accelerated error-bounded lossy compressor for scientific data. Contact him at <a href="mailto:jiannan.tian@uky.edu">jiannan.tian@uky.edu</a>.
+              <p align="left">Dr. Jiannan Tian Received his Ph.D. degree in Computer Engineering (Intelligent Systems Engineering, Computer Engineering Track) from Indiana University Bloomington in 2024. His research interests include High-Performance Computing, Heterogeneous Computing, Big-Data Analytics, and Accelerated Scientific Compression. During his Ph.D. study, he works as a student intern at Argonne National Laboratory (ANL). He is also the leading developer of open-source pSZ/cuSZ, a GPU-accelerated error-bounded lossy compressor for scientific data. Contact him at <a href="mailto:jiannan.tian@uky.edu">jiannan.tian@uky.edu</a>.
               </p>          
           </div>
           <div class="col-md-2">
