--- a/research.html
+++ b/research.html
@@ -198,6 +198,45 @@
 
         <div class="row">
           <div class="col-md-2">
+            <h6>IPDPS'25</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <u>Xuan Wu</u>, Sheng Di, Congrong Ren, <u>Pu Jiao</u>, <u>Mingze Xia</u>, Cheng Wang, Hanqi Guo, <b>Xin Liang<sup>*</sup></b>, Franck Cappello.<br>
+              Enabling Efficient Error-controlled Lossy Compression for Unstructured Scientific Data.<br>
+              <I>Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium, Milan, Italy, June 3 - June 7, 2025.</I> (*: Corresponding authors)<br>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>IPDPS'25</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <u>Pu Jiao</u>, Sheng Di, <u>Mingze Xia</u>, <u>Xuan Wu</u>, Jinyang Liu, <b>Xin Liang<sup>*</sup></b>, Franck Cappello.<br>
+              Improving the Efficiency of Interpolation-Based Scientific Data Compressors with Adaptive Quantization Index Prediction.<br>
+              <I>Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium, Milan, Italy, June 3 - June 7, 2025.</I> (*: Corresponding authors)<br>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>IPDPS'25</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Jieyang Chen, Qian Gon, <b>Xin Liang</b>, Qing Liu, Lipeng Wan, Yanlian Li, Norbert Podhorszki, Scott Klasky.<br>
+              HPDR: High-Performance Portable Scientific Data Reduction Framework.<br>
+              <I>Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium, Milan, Italy, June 3 - June 7, 2025.</I><br>
+            </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-md-2">
             <h6>SC'24</h6>
           </div>
           <div class="col-md-10">
