--- a/research.html
+++ b/research.html
@@ -228,7 +228,7 @@
           </div>
           <div class="col-md-10">
             <p>
-              Jieyang Chen, Qian Gon, <b>Xin Liang</b>, Qing Liu, Lipeng Wan, Yanlian Li, Norbert Podhorszki, Scott Klasky.<br>
+              Jieyang Chen, Qian Gong, <b>Xin Liang</b>, Qing Liu, Lipeng Wan, Yanlian Li, Norbert Podhorszki, Scott Klasky.<br>
               HPDR: High-Performance Portable Scientific Data Reduction Framework.<br>
               <I>Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium, Milan, Italy, June 3 - June 7, 2025.</I><br>
             </p>
