--- a/awards.html
+++ b/awards.html
@@ -57,12 +57,12 @@
           <h2>Awards</h2>
           <ul class="glyphicon glyphicon-list-alt">
               <li>CAREER Award, NSF, 2025.</li>
-              <li>2023 Best Paper Award from IEEE Transactions on Big Data by the IEEE Computer Society Publications Board, IEEE, 2024.</li>
+              <li>2023 Best Paper Award from IEEE Transactions on Big Data, IEEE Computer Society Publications Board, 2024.</li>
               <li>IEEE-CS Technical Community on High Performance Computing (TCHPC) Early Career Researchers Award for Excellence in High Performance Computing, IEEE TCHPC, 2024.</li>
-              <li>EPSCoR Research Fellows, National Science Foundation, 2023.</li>
-              <li>Best Paper Finalists, International Conference on Supercomputing, 2023. </li>
-              <li>CISE Research Initiation Initiative (CRII) Award, National Science Foundation, 2022. </li>
-              <li>2021 R&D 100 Award (SZ compression framework), 2021.</li>
+              <li>EPSCoR Research Fellows, NSF, 2023.</li>
+              <li>Best Paper Finalists, ACM ICS, 2023. </li>
+              <li>CISE Research Initiation Initiative (CRII) Award, NSF, 2022. </li>
+              <li>2021 R&D 100 Award (SZ compression framework), R&D World, 2021.</li>
               <li>Best Paper Award, IEEE Cluster, 2018.</li>
               <li>Dissertation Year Program Fellowship, University of California, Riverside, 2018. </li>
               <li>Dean's Distinguished Fellowship, University of California, Riverside, 2014.</li>
