--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       <div class="starter-template">
         <h2>Latest News</h2>
         <ul class="glyphicon glyphicon-list-alt">
+          <li>01/2025: Xuan's paper on unstructured scientific data compression has been nominated for the Best Paper Award in IPDPS'25. Congratulations to Xuan and the team!</li>
           <li>12/2024: Three papers have been accepted in IPDPS'25. Congratulations to Xuan and Pu!</li>
           <li>12/2024: My <a href=https://www.nsf.gov/awardsearch/showAward?AWD_ID=2442627&HistoricalAwards=false>CAREER project</a> has been awarded by the National Science Foundation! This project aims to reduce the data movement time for scientific applications by enabling adaptable data retrieval with error control. Thanks a lot to the NSF!</li>
           <li>12/2024: Our paper on the <a href="https://ieeexplore.ieee.org/abstract/document/9866018">SZ3 lossy compression framework</a> has been selected as the <a href="https://www.computer.org/publications/best-paper-award-winners">2023 Best Paper Award from IEEE Transactions on Big Data</a> by the IEEE Computer Society Publications Board. Congratulations to the team!</li>
